--- a/app/public/CareConnect_chat.html
+++ b/app/public/CareConnect_chat.html
@@ -2,83 +2,96 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CareConnect Chat</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us - CareConnect</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --primary-color: #588157;
-      --secondary-color: #3498db;
-      --text-color: #2c3e50;
-      --dark-card: #34495e;
-      --transition: all 0.3s ease;
+      --bg-color: transparent;
+      --text-color: #333;
+      --accent-color: #588157;
+      --background-image: url('https://images.unsplash.com/photo-1692183365525-d89941cfb4a5?q=80&w=2068&auto=format&fit=crop');
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    html {
+      scroll-behavior: smooth;
+      font-size: 100%;
     }
 
-    html, body {
-      font-family: 'Poppins', sans-serif;
-      height: 100%;
+    @media (max-width: 480px) {
+      html {
+        font-size: 90%;
+      }
     }
 
     body {
-      background-color: #588157;
+      font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: var(--background-image) no-repeat center center fixed;
+      background-size: cover;
+      background-attachment: fixed;
       color: var(--text-color);
-      display: flex;
-      flex-direction: column;
-      transition: var(--transition);
+      transition: background-color 0.3s, color 0.3s;
     }
 
     body.dark-mode {
-      color: #fff;
-      background-color: #3a5a40;
+      background-color: #333;
+      color: #f5f5f5;
+      background-image: none;
     }
 
     .navbar {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(255, 255, 255, 0.9);
-      backdrop-filter: blur(10px);
-      transition: var(--transition);
+      background-color: var(--accent-color);
+      padding: 20px 30px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
-    body.dark-mode .navbar {
-      background: rgba(44, 62, 80, 0.95);
-    }
-
-    .logo img {
-      height: 50px;
-    }
-
-    .nav-right {
-      margin-left: auto;
+    .navbar-left {
       display: flex;
-      gap: 20px;
       align-items: center;
+      gap: 15px;
     }
 
-    .nav-right a {
+    .navbar-right {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .logo {
+      height: 50px;
+      width: auto;
+    }
+
+    .site-name {
+      font-size: 20px;
+      color: white;
+      font-weight: bold;
+    }
+
+    .navbar a,
+    .navbar button {
       text-decoration: none;
-      color: var(--text-color);
-      font-weight: 500;
-      padding: 8px 16px;
-      border-radius: 20px;
-      transition: var(--transition);
+      color: white;
+      font-size: 16px;
+      background-color: transparent;
+      border: none;
+      cursor: pointer;
     }
 
-    .nav-right a:hover {
-      color: var(--primary-color);
-    }
-
-    body.dark-mode .nav-right a {
-      color: #fff;
+    .navbar a:hover,
+    .navbar button:hover {
+      color: #a3b18a;
     }
 
     .theme-toggle {
@@ -86,199 +99,230 @@
       border: none;
       cursor: pointer;
       font-size: 1.5rem;
-      color: var(--text-color);
-      transition: var(--transition);
+      color: white;
+      transition: color 0.3s ease;
     }
 
     body.dark-mode .theme-toggle {
-      color: #fff;
+      color: #f5f5f5;
     }
 
-    .chat-container {
-      flex: 1;
-      max-width: 1000px;
-      width: 100%;
-      margin: 30px auto;
-      background: rgba(255, 255, 255, 0.75);
-      backdrop-filter: blur(10px);
+    .floating-nav {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .floating-nav {
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        justify-content: space-around;
+        background-color: var(--accent-color);
+        padding: 10px 0;
+        z-index: 9999;
+      }
+
+      .floating-nav a {
+        color: white;
+        font-size: 20px;
+        text-decoration: none;
+      }
+
+      .floating-nav a:hover {
+        color: #a3b18a;
+      }
+    }
+
+    .glass-panel {
+      backdrop-filter: blur(5px);
+      background: rgba(255, 255, 255, 0.2);
+      padding: 30px;
+      margin: 50px auto;
+      max-width: 900px;
       border-radius: 15px;
+      text-align: center;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+      font-size: 1rem;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    h1, h2 {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    #auto-type {
+      font-size: 20px;
+      text-align: center;
+      margin-bottom: 30px;
+      min-height: 40px;
+    }
+
+    .chatbot-bubble {
+      background: var(--accent-color);
+      color: white;
+      padding: 15px 20px;
+      border-radius: 20px;
+      margin: 40px auto 20px auto;
+      text-align: center;
+      width: fit-content;
+      animation: slideIn 1s ease-out;
+    }
+
+    @keyframes slideIn {
+      from { transform: translateY(-30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    .team {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 40px;
+      padding-bottom: 60px;
+    }
+
+    .team-member {
+      background-color: rgba(255, 255, 255, 0.9);
+      border-radius: 10px;
+      width: 100%;
+      max-width: 280px;
       padding: 20px;
-      display: flex;
-      flex-direction: column;
-      min-height: 70vh;
-    }
-
-    .dark-mode .chat-container {
-      background: rgba(0, 0, 0, 0.6);
-    }
-
-    .chat-messages {
-      flex: 1;
-      overflow-y: auto;
-      margin-bottom: 20px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    .message {
-      padding: 10px 15px;
-      border-radius: 12px;
-      max-width: 75%;
-      line-height: 1.5;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .user-message {
-      background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-      color: white;
-      align-self: flex-end;
-    }
-
-    .assistant-message {
-      background: #fff;
-      color: var(--text-color);
-      align-self: flex-start;
-    }
-
-    .dark-mode .assistant-message {
-      background: var(--dark-card);
-      color: white;
-    }
-
-    .input-area {
-      display: flex;
-      gap: 10px;
-    }
-
-    textarea {
-      flex: 1;
-      padding: 10px;
-      font-size: 14px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      resize: none;
-      font-family: 'Poppins', sans-serif;
-    }
-
-    .dark-mode textarea {
-      background: var(--dark-card);
-      color: white;
-      border-color: #555;
-    }
-
-    button#sendButton {
-      padding: 10px 20px;
-      background: var(--primary-color);
-      color: white;
-      border: none;
-      border-radius: 8px;
+      text-align: center;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
       cursor: pointer;
-      transition: var(--transition);
+      color: #333;
     }
 
-    button#sendButton:hover {
-      background: var(--secondary-color);
+    .team-member:hover {
+      transform: translateY(-8px);
     }
+
+    .team-member img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 10px;
+      border: 3px solid var(--accent-color);
+    }
+
+    .team-member h3 { margin: 10px 0 5px; font-size: 20px; }
+    .team-member p { font-size: 16px; color: #555; }
+
+    .social-icons {
+      margin-top: 10px;
+    }
+
+    .social-icons a {
+      color: var(--accent-color);
+      font-size: 22px;
+      margin: 0 8px;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    .social-icons a:hover {
+      color: #000;
+    }
+
+    body.dark-mode .team-member {
+      background-color: rgba(255, 255, 255, 0.1);
+      color: #f5f5f5;
+    }
+    body.dark-mode .team-member p { color: #ccc; }
+    body.dark-mode .team-member h3 { color: #fff; }
+    body.dark-mode .social-icons a { color: #f5f5f5; }
+    body.dark-mode .social-icons a:hover { color: #a3b18a; }
   </style>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">
-      <img src="CareConnectImages/CareConnectLogo.png" alt="CareConnect Logo" />
+  <div class="navbar">
+    <div class="navbar-left">
+      <a href="index.html"><img src="CareConnectImages/CareConnectLogo.png" alt="CareConnect Logo" class="logo" /></a>
+      <span class="site-name">CareConnect</span>
     </div>
-    <div class="nav-right">
+    <div class="navbar-right">
       <a href="index.html">Home</a>
-      <a href="CareConnect_AboutUs.HTML">About</a>
+      <a href="CareConnect_chat.html">Carebot</a>
+      <a href="signup.html">Sign In</a>
       <button class="theme-toggle" id="darkModeToggle"><i class="fas fa-moon"></i></button>
-    </div>
-  </nav>
-
-  <div class="chat-container">
-    <div class="chat-messages" id="chatMessages">
-      <div class="message assistant-message">
-        Hello! I'm your CareConnect AI Health Assistant. How can I help you today?
-      </div>
-    </div>
-    <div class="input-area">
-      <textarea id="userInput" placeholder="Type your message here..." rows="1"></textarea>
-      <button id="sendButton"><i class="fas fa-paper-plane"></i></button>
     </div>
   </div>
 
+  <div class="floating-nav">
+    <a href="index.html"><i class="fas fa-home"></i></a>
+    <a href="CareConnect_chat.html"><i class="fas fa-robot"></i></a>
+    <a href="signup.html"><i class="fas fa-user"></i></a>
+  </div>
+
+  <div class="chatbot-bubble">Hello there! Welcome to CareConnect!</div>
+  <div id="auto-type"></div>
+
+  <div class="glass-panel" id="about">
+    <h1>About Our Chatbot</h1>
+    <p>CareConnect is an AI-powered health assistant designed to help users better understand medical symptoms...</p>
+  </div>
+
+  <div class="glass-panel" id="mission">
+    <h2>Our Mission</h2>
+    <p>We aim to make technology more human, accessible, and helpful...</p>
+  </div>
+
+  <div class="glass-panel" id="vision">
+    <h2>Our Vision</h2>
+    <p>Imagine a world where you can obtain accurate, personalized medical information...</p>
+  </div>
+
+  <div class="glass-panel" id="goals">
+    <h2>Our Future Goals</h2>
+    <p>At CareConnect, we’re working to make healthcare more personal and secure...</p>
+  </div>
+
+  <h2>Meet the Team</h2>
+  <div class="team">
+    <!-- Team members go here -->
+  </div>
+
   <script>
-    const darkModeToggle = document.getElementById('darkModeToggle');
-    const icon = darkModeToggle.querySelector('i');
+    const text = "CareConnect makes conversations natural, informative, and friendly.";
+    let index = 0;
+    let isDeleting = false;
+
+    function typeEffect() {
+      const typingElement = document.getElementById("auto-type");
+      if (!typingElement) return;
+
+      typingElement.innerHTML = isDeleting
+        ? text.substring(0, index--)
+        : text.substring(0, index++);
+
+      if (index === text.length) isDeleting = true;
+      if (index === 0) isDeleting = false;
+
+      setTimeout(typeEffect, isDeleting ? 30 : 50);
+    }
+
+    typeEffect();
+
+    const toggle = document.getElementById('darkModeToggle');
+    const icon = toggle.querySelector('i');
     const body = document.body;
 
     function setDarkMode(enabled) {
-      if (enabled) {
-        body.classList.add('dark-mode');
-        icon.classList.replace('fa-moon', 'fa-sun');
-        localStorage.setItem('darkMode', 'enabled');
-      } else {
-        body.classList.remove('dark-mode');
-        icon.classList.replace('fa-sun', 'fa-moon');
-        localStorage.removeItem('darkMode');
-      }
+      body.classList.toggle('dark-mode', enabled);
+      icon.classList.replace(enabled ? 'fa-moon' : 'fa-sun', enabled ? 'fa-sun' : 'fa-moon');
+      localStorage.setItem('darkMode', enabled ? 'enabled' : 'disabled');
     }
 
-    if (localStorage.getItem('darkMode') === 'enabled') {
-      setDarkMode(true);
-    }
-
-    darkModeToggle.addEventListener('click', () => {
-      const isDark = body.classList.contains('dark-mode');
-      setDarkMode(!isDark);
-    });
-
-    const sendButton = document.getElementById('sendButton');
-    const userInput = document.getElementById('userInput');
-    const chatMessages = document.getElementById('chatMessages');
-
-    async function sendMessage() {
-      const input = userInput.value.trim();
-      if (!input) return;
-
-      const userMsg = document.createElement('div');
-      userMsg.className = 'message user-message';
-      userMsg.innerText = input;
-      chatMessages.appendChild(userMsg);
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-
-      userInput.value = '';
-      sendButton.disabled = true;
-
-      const assistantMsg = document.createElement('div');
-      assistantMsg.className = 'message assistant-message';
-      assistantMsg.innerText = 'Thinking...';
-      chatMessages.appendChild(assistantMsg);
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-
-      try {
-        const response = await fetch('https://careconnect-backend-387872558831.us-central1.run.app/llm/invoke', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ input })
-        });
-
-        const data = await response.json();
-        assistantMsg.innerText = data.output || 'Sorry, something went wrong.';
-      } catch (err) {
-        assistantMsg.innerText = 'Error: Unable to get a response.';
-      }
-
-      sendButton.disabled = false;
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-    }
-
-    sendButton.addEventListener('click', sendMessage);
-    userInput.addEventListener('keydown', e => {
-      if (e.key === 'Enter' && !e.shiftKey) {
-        e.preventDefault();
-        sendMessage();
-      }
-    });
+    setDarkMode(localStorage.getItem('darkMode') === 'enabled');
+    toggle.addEventListener('click', () => setDarkMode(!body.classList.contains('dark-mode')));
   </script>
 </body>
 </html>
+
