Aubrey's final update for the webpages!!

--- a/app/public/CareConnect_chat.html
+++ b/app/public/CareConnect_chat.html
@@ -286,7 +286,7 @@
 
   <h2>Meet the Team</h2>
   <div class="team">
-    <!-- Team members go here -->
+    <!-- Team members  here -->
   </div>
 
   <script>
